# aeson-qq

./: .ghci  .gitignore  .hlint.yaml  .travis.yml  COPYING.txt  README.markdown  aeson-qq.cabal  cabal.project  index.html  package.yaml  params.json  sample.json
.github/workflows/: build.yml
src/Data/Aeson/: QQ.hs  TestQQ.hs
src/Data/JSON/: QQ.hs
test/: Person.hs
test/Data/Aeson/: QQSpec.hs  QQTest.hs
test/Data/JSON/: QQSpec.hs
