name:             aeson-qq
version:          0.6.0
synopsis:         Json Quasiquatation for Haskell.
description:      @aeson-qq@ provides json quasiquatation for Haskell.
                  .
                  This package expose the function @aesonQQ@ that compile time converts json code into a @Data.Aeson.Value@.
                  @aesonQQ@ got the signature
                  .
                  > aesonQQ :: QuasiQuoter.
                  .
                  Consult documentation in the module @Data.Aeson.QQ@.

homepage:         http://github.com/zalora/aeson-qq
license:          MIT
license-file:     LICENSE
author:           Oscar Finnsson
maintainer:       Simon Hengel <sol@typeful.net>
category:         JSON
build-type:       Simple
cabal-version:    >= 1.8

source-repository head
  type: git
  location: https://github.com/zalora/aeson-qq/

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Aeson.QQ
  build-depends:
      base >= 4.6 && < 5
    , text
    , vector
    , aeson >= 0.7
    , json-qq == 0.4.1
    , template-haskell
    , haskell-src-meta >= 0.1.0

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base >= 4.6 && < 5
    , aeson-qq
    , aeson
    , hspec
