name:             aeson-qq
version:          0.8.1
synopsis:         JSON quasiquoter for Haskell
description:      @aeson-qq@ provides a JSON quasiquoter for Haskell.
                  .
                  This package exposes the function `aesonQQ` that compile-time
                  converts a string representation of a JSON value into a
                  `Data.Aeson.Value`.  `aesonQQ` has the signature
                  .
                  >aesonQQ :: QuasiQuoter
                  .
                  Consult the @README@ for documentation:
                  <https://github.com/zalora/aeson-qq#readme>

homepage:         http://github.com/zalora/aeson-qq
license:          MIT
license-file:     LICENSE
author:           Oscar Finnsson
maintainer:       Simon Hengel <sol@typeful.net>
category:         JSON
build-type:       Simple
cabal-version:    >= 1.8

source-repository head
  type: git
  location: https://github.com/zalora/aeson-qq/

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Data.Aeson.QQ
  other-modules:
      Data.JSON.QQ
  build-depends:
      base >= 4.5 && < 5
    , base-compat
    , text
    , attoparsec
    , scientific
    , vector
    , aeson >= 0.6
    , parsec
    , template-haskell
    , haskell-src-meta >= 0.1.0

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  other-modules:
      Person
      Data.Aeson.QQSpec
  build-depends:
      base >= 4.5 && < 5
    , base-compat
    , text
    , attoparsec
    , scientific
    , vector
    , aeson
    , parsec
    , template-haskell
    , haskell-src-meta

    , aeson
    , hspec

    -- Neded for GHC 7.4.*
    , ghc-prim
